# sql2code

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: queries.dart  queries1.dart  queries1.sql  queries2.dart  queries2.sql  run-examples.dart
sql2code/: __init__.py  core.py  sql2dart.py
